Fixed "attributes" class overlapping with Roll20 class of same name.

--- a/glitch-roll20.css
+++ b/glitch-roll20.css
@@ -6,11 +6,11 @@ textarea {
 /* Grid layout of sections */
 div.sheet-main {
 	display: grid;
-	grid-template-areas: "bio         bio"
-	                     "attributes  costs"
-						 "gifts       treasures"
-						 "technique   technique"
-						 "destruction destruction";
+	grid-template-areas: "bio           bio"
+	                     "glitch_atribs costs"
+						 "gifts         treasures"
+						 "technique     technique"
+						 "destruction   destruction";
 	grid-gap: 1em;
 	column-gap: 1em;
 }
@@ -36,14 +36,14 @@ div.destruction {
 }
 
 /* Display attributes and costs as grids. */
-div.attributes {
-	grid-area: attributes;
+div.glitch_atribs  {
+	grid-area: glitch_atribs ;
     display: grid;
     grid-template-columns: 5em 2.5em;
     column-gap: 1em;
 	grid-row-gap: 0.5em;
 }
-div.attributes h2 {
+div.glitch_atribs  h2 {
     grid-column: 1 / span 2;
 }
 
